--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </header>
     <main class="container mt-5 ">
         <div class="mb-3 ">
-            <input type="email" class="form-control" id="exampleFormControlInput1">
+            <input id="input-field" type="email" class="form-control" id="exampleFormControlInput1">
         </div>
         <div class="mt-2">
             <nav class="navbar navbar-expand-lg">
