--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <li id="blog-field" class="nav-item">
                                 <a class="nav-link" data-bs-toggle="modal" data-bs-target="#blogModal" href="#">Blog</a>
 
-                                <!-- Modal -->
+                                <!--Blog Modal -->
                                 <div class="modal fade" id="blogModal" tabindex="-1" aria-labelledby="blogModalLabel"
                                     aria-hidden="true">
                                     <div class="modal-dialog">
