--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
-                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                    <li><a class="dropdown-item"
+                                            href="https://www.google.com/search?q=bangladesh+pratidin&rlz=1C1UEAD_enBD1012BD1012&ei=HpJNY4iBDLG9z7sP9reg2AQ&oq=daily+ittefaq&gs_lcp=Cgdnd3Mtd2l6EAEYAzIKCAAQRxDWBBCwAzIKCAAQRxDWBBCwAzIKCAAQRxDWBBCwAzIKCAAQRxDWBBCwAzIKCAAQRxDWBBCwAzIKCAAQRxDWBBCwAzIKCAAQRxDWBBCwAzIKCAAQRxDWBBCwA0oECEEYAEoECEYYAFAAWABgowhoAXABeACAAQCIAQCSAQCYAQDIAQjAAQE&sclient=gws-wiz">Something
+                                            else here</a></li>
                                 </ul>
                             </li>
                         </ul>
