--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
             </div>
         </div>
 
+        <!-- error massage -->
         <div id="error-massage">
         </div>
-
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
